# cli-prep

./: README.md  example.json  pyproject.toml
quizzes/: aws-cloud-practitioner.json  example.json  schema.json  security-plus.json
src/package/: app.tcss  main.py  models.py  session.py  tui.py
